--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
+<%= form_with model: @post, local: true do |form| %>
+  <%= form.label :body, "内容" %>
+  <%= form.text_field :body %>
+  <%= form.submit "投稿" %>
+<% end %>
 <h1>投稿一覧</h1>
 <%= render partial: "post", collection: @posts %>
 <%= paginate @posts %>
