--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @post, local: true do |form| %>
   <%= form.label :body, "内容" %>
-  <%= form.text_field :body %>
+  <%= form.text_field :body, required: true %>
   <%= form.submit "投稿" %>
 <% end %>
 <h1>投稿一覧</h1>
