--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,5 +4,6 @@
   <%= form.submit "投稿" %>
 <% end %>
 <h1>投稿一覧</h1>
-<%= render partial: "post", collection: @posts %>
+<%= render "form" %>
+<%= render @posts %>
 <%= paginate @posts %>
