--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,5 @@
-<p>ARTIST NAME: <%= post.body %></p>
+<%= form_with model: @post, local: true do |form| %>
+  <%= form.label :body, "内容" %>
+  <%= form.text_field :body, required: true %>
+  <%= form.submit "投稿" %>
+<% end %>
